<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".HomeActivity">

    <Spinner
        android:id="@+id/ddr_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_consumer_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_consumer_code"
        android:inputType="number"
        android:text="65219436"
        android:textSize="24dp"
        android:background="@drawable/et_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ddr_spinner" />

    <Button
        android:id="@+id/btn_fetch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fetch Details"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_consumer_code" />

    <TextView
        android:id="@+id/tv_consumer_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textSize="24dp"
        android:paddingLeft="5dp"
        android:text="@string/consumer_detail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fetch" />

    <Spinner
        android:id="@+id/jobs_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_consumer_detail" />

    <EditText
        android:id="@+id/et_reading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_reading"
        android:background="@drawable/et_background"
        android:inputType="number"
        android:minLines="3"
        android:maxLines="5"
        android:layout_marginTop="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobs_spinner" />
    <EditText
        android:id="@+id/et_remarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_remarks"
        android:background="@drawable/et_background"
        android:inputType="text"
        android:minLines="3"
        android:maxLines="5"
        android:layout_marginTop="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reading" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="Upload Reading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_remarks" />

</androidx.constraintlayout.widget.ConstraintLayout>